# 11

./: .gitignore  README.md  pyproject.toml
docs/: method_status.md
pxdesign_train/: __init__.py  cogenerate.py  generator.py  heads.py  loss.py  model.py
pxdesign_train/configs/: configs_train.py
pxdesign_train/data/: __init__.py  _helpers.py  cropper.py  curriculum.py  featurizer.py
pxdesign_train/runner/: __init__.py  cif_provider.py  data.py  finetune.py  providers.py  train.py  trainer.py
pxdesign_train/sidechain/: losses.py  module.py  physical.py  routing.py
scripts/: finetune_demo.sh  finetune_mini.py  smoke_test_gpu.py  train_demo.sh
tests/: test_aa_masked_diffusion.py  test_curriculum.py  test_design_cropper.py  test_design_featurizer.py  test_m1_m5_fixes.py  test_providers_and_finetune.py  test_sidechain_loss_integration.py  test_sidechain_losses.py  test_sidechain_module.py  test_template_init.py  test_train_forward.py  test_trainer_integration.py
